// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FlagValue Component should format array value as JSON 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F3F7",
      "padding": 10,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      arrayKey
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      [1,2,3]
    </Text>
  </View>
</View>
`;

exports[`FlagValue Component should format nested object as JSON 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F3F7",
      "padding": 10,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      objectKey
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      {
  "nested": "value",
  "count": 5
}
    </Text>
  </View>
</View>
`;

exports[`FlagValue Component should format primitive values correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F3F7",
      "padding": 10,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      stringKey
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      test string
    </Text>
  </View>
</View>
`;

exports[`FlagValue Component should format primitive values correctly 2`] = `
<View
  style={
    {
      "backgroundColor": "#F3F3F7",
      "padding": 10,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      numberKey
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      42
    </Text>
  </View>
</View>
`;

exports[`FlagValue Component should format primitive values correctly 3`] = `
<View
  style={
    {
      "backgroundColor": "#F3F3F7",
      "padding": 10,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      boolKey
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      true
    </Text>
  </View>
</View>
`;

exports[`FlagValue Component should format primitive values correctly 4`] = `
<View
  style={
    {
      "backgroundColor": "#F3F3F7",
      "padding": 10,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      boolKey
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      false
    </Text>
  </View>
</View>
`;

exports[`FlagValue Component should format primitive values correctly 5`] = `
<View
  style={
    {
      "backgroundColor": "#F3F3F7",
      "padding": 10,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      nullKey
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      null
    </Text>
  </View>
</View>
`;

exports[`FlagValue Component should render empty object 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F3F7",
      "padding": 10,
    }
  }
/>
`;

exports[`FlagValue Component should render multiple key-value pairs 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F3F7",
      "padding": 10,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      flag1
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      true
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      flag2
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      enabled
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      flag3
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      100
    </Text>
  </View>
</View>
`;

exports[`FlagValue Component should render object modifications 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F3F7",
      "padding": 10,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      key1
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      value1
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "justifyContent": "flex-start",
        "marginBottom": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#2A2A3C",
          "fontWeight": "600",
        }
      }
    >
       
      key2
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#FCFCFD",
          "borderColor": "#D8D8E2",
          "borderRadius": 15,
          "borderWidth": 1,
          "fontWeight": "600",
          "marginHorizontal": 5,
          "paddingHorizontal": 10,
          "paddingVertical": 2,
        }
      }
    >
      IS
    </Text>
    <Text
      style={
        {
          "backgroundColor": "#DBE5FF",
          "borderRadius": 15,
          "fontWeight": "600",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      value2
    </Text>
  </View>
</View>
`;
